Updates to register.html

--- a/templates/register.html
+++ b/templates/register.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RailBelgium - Sign-Up</title>
-    <link rel="stylesheet" href="../static/style/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
-    <div class="navbar">
-        <nav class="nav">
-            <ul>
+<div class="navbar">
+    <nav class="nav">
+        <ul>
             <li><a href="/">home</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/sign_up">Sign-Up</a></li>
         </ul>
-        </nav>
-    </div>
-    <p>this is the Sign-Up page</p>
+    </nav>
+</div>
+<p>this is the Sign-Up page</p>
 
-    <div class="sign-up">
-        <form id="sign-up-form" action="" method="post">
-            <label for="FirstName">First name</label>
-            <input type="text" id="FirstName" placeholder="example: Thibaut"><br>
-            <label for="SeccondName">Seccond name</label>
-            <input type="text" id="SeccondName" placeholder="example: Verbeke"><br>
-            <label for="userName">Username:</label>
-            <input type="text" name="userName" id="userName"><br>
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="example@example.be"><br>
-            <label for="pwd">Password:</label>
-            <input type="password" name="pwd" id="pwd"><br>
-            <label for="pwdRepeat">Repeat password:</label>
-            <input type="password" name="pwdRepeat" id="pwdRepeat"><br>
-            <p>already a account? click <a href="/login">here</a></p><br>
-            <input type="submit" value="Sign up">
-        </form>
-    </div>
+<div class="sign-up">
+    <form id="sign-up-form" action="" method="post">
+        <label for="FirstName">First name</label>
+        <input type="text" id="FirstName" name="FirstName" placeholder="example: Thibaut"><br>
+        <label for="SecondName">Second name</label>
+        <input type="text" id="SecondName" name="SecondName" placeholder="example: Verbeke"><br>
+        <label for="userName">Username:</label>
+        <input type="text" name="userName" id="userName"><br>
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" placeholder="example@example.be"><br>
+        <label for="pwd">Password:</label>
+        <input type="password" name="pwd" id="pwd"><br>
+        <label for="pwdRepeat">Repeat password:</label>
+        <input type="password" name="pwdRepeat" id="pwdRepeat"><br>
+        <p>already a account? click <a href="/login">here</a></p><br>
+        <input type="submit" value="Sign up">
+    </form>
+</div>
 </body>
 </html>
