--- a/templates/register.html
+++ b/templates/register.html
@@ -33,6 +33,8 @@
         <label for="pwdRepeat">Repeat password:</label>
         <input type="password" name="pwdRepeat" id="pwdRepeat"><br>
         <p>already a account? click <a href="/login">here</a></p><br>
+        
+        <p>{{err}}</p>
         <input type="submit" value="Sign up">
     </form>
     
