--- a/templates/login.html
+++ b/templates/login.html
@@ -28,6 +28,7 @@
             <input type="checkbox" name="stay_logged_in" id="stay_logged_in">
             <label for="stay_logged_in">Remember me</label>
             <p>If you don't have an account yet click <a href="/register">here</a></p><br>
+            <p>{{err}}</p>
             <input type="submit" value="login">
             
 
