--- a/templates/register.html
+++ b/templates/register.html
@@ -33,8 +33,11 @@
         <label for="pwdRepeat">Repeat password:</label>
         <input type="password" name="pwdRepeat" id="pwdRepeat"><br>
         <p>already a account? click <a href="/login">here</a></p><br>
-        <p>{{err}}</p>
         <input type="submit" value="Sign up">
+        {% for i in err %}
+        	<p>{{err[i]}}</p><br>
+        {% endfor %}
+
     </form>
     
 </div>
